--- a/HTML&CSS/03-CSS-Fundamentals/blog.html
+++ b/HTML&CSS/03-CSS-Fundamentals/blog.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html>
+  <head>
     <title>BLOG</title>
-</head>
-<body>
+  </head>
+  <body>
     <h2>BLOG</h2>
     <a href="index.html">Back to home</a>
-</body>
+  </body>
 </html>
