--- a/HTML&CSS/03-CSS-Fundamentals/index.html
+++ b/HTML&CSS/03-CSS-Fundamentals/index.html
@@ -2,12 +2,23 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>The Basic Language of the Web: HTML</title>
+        <link rel="stylesheet" href="style.css" />
     </head>
+
     <body>
-        <header>
+        <!--
+    <h1>The Basic Language of the Web: HTML</h1>
+    <h2>The Basic Language of the Web: HTML</h2>
+    <h3>The Basic Language of the Web: HTML</h3>
+    <h4>The Basic Language of the Web: HTML</h4>
+    <h5>The Basic Language of the Web: HTML</h5>
+    <h6>The Basic Language of the Web: HTML</h6>
+    -->
+
+        <header class="main-header">
             <h1>📘 The Code Magazine</h1>
+
             <nav>
                 <a href="blog.html">Blog</a>
                 <a href="#">Challenges</a>
@@ -15,35 +26,43 @@
                 <a href="#">CSS Grid</a>
             </nav>
         </header>
+
         <article>
             <header>
                 <h2>The Basic Language of the Web: HTML</h2>
+
                 <img
                     src="img/laura-jones.jpg"
-                    alt="laura photo"
-                    width="50"
+                    alt="Headshot of Laura Jones"
                     height="50"
+                    width="50"
                 />
-                <p>
+
+                <p id="author">
                     Posted by <strong>Laura Jones</strong> on Monday, June 21st
                     2027
                 </p>
+
                 <img
                     src="img/post-img.jpg"
-                    alt="html code"
+                    alt="HTML code on a screen"
                     width="500"
                     height="200"
                 />
             </header>
+
             <p>
                 All modern websites and web applications are built using three
-                fundamental technologies: HTML, CSS and JavaScript. These are
-                the languages of the web.
+                <em>fundamental</em>
+                technologies: HTML, CSS and JavaScript. These are the languages
+                of the web.
             </p>
+
             <p>
                 In this post, let's focus on HTML. We will learn what HTML is
                 all about, and why you too should learn it.
             </p>
+
             <h3>What is HTML?</h3>
             <p>
                 HTML stands for <strong>H</strong>yper<strong>T</strong>ext
@@ -57,27 +76,33 @@
                 browsers understand HTML and render HTML code as websites.
             </p>
             <p>In HTML, each element is made up of 3 parts:</p>
+
             <ol>
-                <li>The opening tag</li>
+                <li class="first-li">The opening tag</li>
                 <li>The closing tag</li>
                 <li>The actual element</li>
             </ol>
+
             <p>
                 You can learn more at
                 <a
                     href="https://developer.mozilla.org/en-US/docs/Web/HTML"
                     target="_blank"
-                    >MDN Web Docs
-                    <!-- target="_blank"- render in the new tab -->
-                </a>
+                    >MDN Web Docs</a
+                >.
             </p>
+
             <h3>Why should you learn HTML?</h3>
+
             <p>
                 There are countless reasons for learning the fundamental
                 language of the web. Here are 5 of them:
             </p>
-            <ol>
-                <li>To be able to use the fundamental web dev language</li>
+
+            <ul>
+                <li class="first-li">
+                    To be able to use the fundamental web dev language
+                </li>
                 <li>
                     To hand-craft beautiful websites instead of relying on tools
                     like Worpress or Wix
@@ -85,44 +110,52 @@
                 <li>To build web applications</li>
                 <li>To impress friends</li>
                 <li>To have fun 😃</li>
-            </ol>
+            </ul>
+
             <p>Hopefully you learned something new here. See you next time!</p>
         </article>
+
         <aside>
             <h4>Related posts</h4>
-            <ul>
+
+            <ul class="related-list">
                 <li>
                     <img
                         src="img/related-1.jpg"
-                        alt="programmer"
+                        alt="Person programming"
                         width="75"
-                        height="75"
+                        width="75"
                     />
                     <a href="#">How to Learn Web Development</a>
+                    <p class="related-author">By Jonas Schmedtmann</p>
                 </li>
-                <p>By Jonas Schmedtmann</p>
                 <li>
                     <img
                         src="img/related-2.jpg"
-                        alt="thunder"
+                        alt="Lightning"
                         width="75"
-                        height="75"
+                        heigth="75"
                     />
                     <a href="#">The Unknown Powers of CSS</a>
+                    <p class="related-author">By Jim Dillon</p>
                 </li>
-                <p>By Jim Dillon</p>
                 <li>
                     <img
                         src="img/related-3.jpg"
-                        alt="JavaScrip code"
+                        alt="JavaScript code on a screen"
                         width="75"
                         height="75"
                     />
                     <a href="#">Why JavaScript is Awesome</a>
-                    <p>By Matilda</p>
+                    <p class="related-author">By Matilda</p>
                 </li>
             </ul>
         </aside>
-        <footer>Copyright &copy; 2027 ny The Code Magazine</footer>
+
+        <footer>
+            <p id="copyright" class="copyright text">
+                Copyright &copy; 2027 by The Code Magazine.
+            </p>
+        </footer>
     </body>
 </html>
